--- a/serialCom/todo.txt
+++ b/serialCom/todo.txt
@@ -1,9 +1,21 @@
-1. csv数据存储还没做好
-1 不存储
-2,3 存储
+1. csv数据存储, flag=1 不存储 flag=2,3 存储(done)
 
-2. 缺少icon
+2. py2exe打包python,pyqt5,pyserial成exe(done)
 
-3. py2exe打包python,pyqt5,pyserial成exe
+3. 缺少icon图标
 
 4. nsni打包最终的exe
+
+5. 缺少日志
+
+6. 缺少桌面快捷方式
+
+7. 程序名称不太好(已改)
+
+8. 缺少串口状态信息
+
+9. 去除所有打印
+
+10. 添加命令行命令
+
+11. 去除所有的assert,使程序不崩溃
