--- a/serialCom/todo.txt
+++ b/serialCom/todo.txt
@@ -2,20 +2,20 @@
 
 2. py2exe打包python,pyqt5,pyserial成exe(done)
 
-3. 缺少icon图标
+3. 缺少日志(完成)
 
-4. nsni打包最终的exe
+4. n程序名称不太好(已改)
 
-5. 缺少日志
+5. 去除所有打印(完成)
 
-6. 缺少桌面快捷方式
+6. 去除所有的assert,使程序不崩溃(完成)
 
-7. 程序名称不太好(已改)
+7. sni打包最终的exe
 
 8. 缺少串口状态信息
 
-9. 去除所有打印
+9. 缺少icon图标
 
 10. 添加命令行命令
 
-11. 去除所有的assert,使程序不崩溃
+11. 缺少桌面快捷方式
